Map Legend no longer overlaps Navigation Menu on mobile

--- a/fireflight/src/styles/_map-legend.scss
+++ b/fireflight/src/styles/_map-legend.scss
@@ -6,7 +6,7 @@
     position: absolute;
     top: 70px;
     left: 50px;
-    z-index: 10;
+    z-index: 5;
     width: 200px;
 
     .legend-item {
